[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/board/Board.gd" type="Script" id=1]
[ext_resource path="res://data/board.png" type="Texture" id=2]
[ext_resource path="res://src/board/BoardButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://data/x.wav" type="AudioStream" id=4]
[ext_resource path="res://data/O.wav" type="AudioStream" id=5]
[ext_resource path="res://data/A_A_Aalto_-_Sneak.wav" type="AudioStream" id=6]
[ext_resource path="res://src/board/HUD.tscn" type="PackedScene" id=7]

[node name="Board" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="." index="0"]

position = Vector2( 306.031, 294.264 )
texture = ExtResource( 2 )

[node name="BoardButton1" parent="." index="1" instance=ExtResource( 3 )]

margin_left = 98.0
margin_top = 94.0
margin_right = 198.0
margin_bottom = 194.0

[node name="BoardButton2" parent="." index="2" instance=ExtResource( 3 )]

margin_left = 240.0
margin_top = 93.0
margin_right = 340.0
margin_bottom = 193.0

[node name="BoardButton3" parent="." index="3" instance=ExtResource( 3 )]

margin_left = 399.0
margin_top = 92.0
margin_right = 499.0
margin_bottom = 192.0

[node name="BoardButton4" parent="." index="4" instance=ExtResource( 3 )]

margin_left = 91.0
margin_top = 247.0
margin_right = 191.0
margin_bottom = 347.0

[node name="BoardButton5" parent="." index="5" instance=ExtResource( 3 )]

margin_left = 242.0
margin_top = 244.0
margin_right = 342.0
margin_bottom = 344.0

[node name="BoardButton6" parent="." index="6" instance=ExtResource( 3 )]

margin_left = 397.0
margin_top = 249.0
margin_right = 497.0
margin_bottom = 349.0

[node name="BoardButton7" parent="." index="7" instance=ExtResource( 3 )]

margin_left = 95.0
margin_top = 395.0
margin_right = 195.0
margin_bottom = 495.0

[node name="BoardButton8" parent="." index="8" instance=ExtResource( 3 )]

margin_left = 246.0
margin_top = 397.0
margin_right = 346.0
margin_bottom = 497.0

[node name="BoardButton9" parent="." index="9" instance=ExtResource( 3 )]

margin_left = 397.0
margin_top = 397.0
margin_right = 497.0
margin_bottom = 497.0

[node name="X_Sound" type="AudioStreamPlayer" parent="." index="10"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="O_Sound" type="AudioStreamPlayer" parent="." index="11"]

stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="BG_Music" type="AudioStreamPlayer" parent="." index="12"]

stream = ExtResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="HUD" parent="." index="13" instance=ExtResource( 7 )]

[connection signal="pressed" from="BoardButton1" to="." method="_on_BoardButton_pressed"]

[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]


